# klib

./: !commands.txt  .coverage  .coveragerc  .deepsource.toml  .gitignore  .gitignore_old  .isort.cfg  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  azure-pipelines.yml  environment.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black.yml  cml.yml  codeql-analysis.yml  ossar-analysis.yml  pre-commit.yaml  pythonpackage.yml  pythonpublish.yml
docs/: README.rst  README_EX.rst  requirements.txt
docs/old/: README.rst  requirements.txt
docs/old/source/: conf.py  index.rst  install.rst
docs/site/: 404.html  index.html  sitemap.xml
docs/site/old/: README_EX.rst  requirements.txt
docs/site/old/source/: about.rst  conf.py  modules.rst
docs/site/search/: search_index.json
docs/source/: about.rst  conf.py  examples.rst  index.rst  install.rst  modules.rst
docs/source/_build/html/: genindex.html  index.html  klib.html  klib.tests.html  modules.html  objects.inv  search.html  searchindex.js  setup.html
docs/source/_build/html/.doctrees/: environment.pickle  index.doctree  klib.doctree  klib.tests.doctree  modules.doctree  setup.doctree
docs/source/_build/html/_sources/: index.rst.txt  klib.rst.txt
docs/source/_build/html/_static/: documentation_options.js
examples/: README.md  klib-plots.ipynb  klib_data_cleaning.ipynb
klib/: __init__.py  _version.py  clean.py  describe.py  environment.yml  ingest.py  preprocess.py  scrap_file.py  utils.py
klib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
klib/Describe/: describe.py
klib/preprocess/: preprocess.py
klib/scripts/: performance.py
klib/tests/: test_clean.py  test_describe.py  test_preprocess.py  test_util.py
src/klib/: __init__.py  _version.py  clean.py  describe.py  preprocess.py  utils.py
src/klib/scripts/: performance.py
tests/: conftest.py  test_clean.py  test_describe.py  test_preprocess.py  test_util.py
