[tool.poetry]
name = "klib"
version = "1.1.1"
description = "Customized data preprocessing functions for frequent tasks."
authors = ["Andreas Kanz <andreas@akanz.de>"]
license = "MIT"
readme = "README.md"

packages = [{ include = "klib", from = "src" }]
include = [{ path = "tests", format = "sdist" }]

[tool.poetry.dependencies]
Jinja2 = "^3.0.3"
matplotlib = "^3.0.3"
numpy = "^1.16.3"
pandas = ">=1.2,<3.0"
plotly = "^5.2.2"
python = ">=3.8.0,<4.0.0"
scipy = "^1.1.0"
screeninfo = "^0.8.1"
seaborn = ">=0.11.2"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
ipykernel = "^6.24.0"
mypy = "^1.4.1"
nbformat = "^5.1.3"
pre-commit = "^3.3.3"
pydocstyle = "^6.2.3"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.0.280"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target_version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
skip_gitignore = true
force_single_line = true

[tool.pydocstyle]
match_dir = "[^(?!tests|\\.)].*"     # not tests and not a folder that starts with a dot
match = "^(?!(__init__|setup)).*py$" # py files which do not start with __init__ or setup
convention = "numpy"

# Testing

[tool.pytest.ini_options]
required_plugins = ["pytest-cov"]
addopts = """
--color=yes \
--code-highlight=yes \
--verbose \
--junitxml=tests/reports/junit.xml \
--cov-report term-missing:skip-covered \
--cov-report=xml:tests/reports/coverage.xml \
--cov-report=html:tests/reports/htmlcov \
--cov=. -ra"""
minversion = "6.0"
testpaths = ["tests/"]

[tool.coverage.run]
omit = ["tests/*", "*/test_*.py", "*/__*__.py", "*_version.py"]
branch = true
data_file = "tests/.coverage"

[tool.coverage.report]
fail_under = 0

[tool.ruff]
fix = true
unfixable = [
    "C408",
    "D200",
    "D400",
    "D415",
    "E712",
    "E731",
    "ERA001",
    "F841",
    "PT001",
    "PT004",
    "PT022",
    "PT023",
    "RUF100",
    "SIM108",
]

select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C",
    "C4",
    "C90",
    "COM",
    "D",
    "DJ",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T",
    "T10",
    "T20",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]

ignore = ["T201", "FBT001", "FBT002", "PLR0913", "D213", "D203"]

line-length = 88
target-version = "py38"

[tool.ruff.mccabe]
max-complexity = 7

[tool.ruff.per-file-ignores]
"test**" = ["ANN", "D", "S101", "PLR", "PT009", "N", "E501"]
"**/scripts/**" = ["ANN", "D", "S101", "PLR", "PT009", "N", "E501"]
[tool.ruff.isort]
force-single-line = true
